feat(SCRUM-86):implement currentWeek endpoint
